# chess-ratings

./: CMakeLists.txt  README.md  process.sh
src/: CMakeLists.txt  absl.cpp  main.cpp  mapped_file.h  player.h  ratings.cpp  ratings.h  ratings_cuda.cu  ratings_cuda.h  ratings_cuda_impl.cpp  timer.h
src/threads/: threads.cpp  threads.h  waiter.h
